--- a/car/src/main/resources/application.properties
+++ b/car/src/main/resources/application.properties
@@ -14,7 +14,9 @@ mybatis.type-aliases-package=com.qf.entity
 mybatis.mapper-locations=classpath:mapper/*.xml
 # 开启控制台显示sql语句
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#全局映射
 mybatis.configuration.auto-mapping-behavior=full
+
 ## freemarker配置
 ##是否开启缓存
 #spring.freemarker.cache=false
